--- a/charts/jobs-manager-operator/templates/manager-rbac.yaml
+++ b/charts/jobs-manager-operator/templates/manager-rbac.yaml
@@ -44,6 +44,15 @@ rules:
   - patch
   - update
   - watch
+# Add access to events
+- apiGroups:
+  - ""
+  resources:
+  - events
+  verbs:
+  - create
+  - patch
+  - update
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
