--- a/artifacthub-repo.yml
+++ b/artifacthub-repo.yml
@@ -1,4 +1,4 @@
-repositoryID: raczylo-com
+repositoryID: 2b92d5b8-cc60-4cf9-9e42-4b5c96ea2fe5
 owners:
   - name: lukasz
     email: lukasz@raczylo.com
