--- a/charts/jobs-manager-operator/values.yaml
+++ b/charts/jobs-manager-operator/values.yaml
@@ -13,7 +13,7 @@ controllerManager:
   manager:
     image:
       repository: ghcr.io/lukaszraczylo/jobs-manager-operator
-      tag: latest
+      tag: 0.0.30
     resources:
       limits:
         cpu: 500m
