--- a/charts/jobs-manager-operator/.cr-index/index.yaml
+++ b/charts/jobs-manager-operator/.cr-index/index.yaml
@@ -2,6 +2,24 @@ apiVersion: v1
 entries:
   jobs-manager:
   - apiVersion: v2
+    appVersion: 0.0.33
+    created: "2024-01-05T11:54:47.581537Z"
+    description: Kubernetes jobs manager operator
+    digest: 61664eeade1115889899d159408e26cc55041352b01db19c483d1c4f259691c7
+    home: https://raczylo.com
+    keywords:
+    - operator
+    - jobs
+    - tasks
+    maintainers:
+    - email: job-manager-operator@raczylo.com
+      name: lukaszraczylo
+    name: jobs-manager
+    type: application
+    urls:
+    - https://github.com/lukaszraczylo/helm-charts/releases/download/jobs-manager-0.0.33/jobs-manager-0.0.33.tgz
+    version: 0.0.33
+  - apiVersion: v2
     appVersion: 0.0.30
     created: "2024-01-02T10:11:51.115128Z"
     description: Kubernetes jobs manager operator
@@ -73,4 +91,4 @@ entries:
     urls:
     - https://github.com/lukaszraczylo/helm-charts/releases/download/jobs-manager-0.0.24/jobs-manager-0.0.24.tgz
     version: 0.0.24
-generated: "2024-01-02T10:11:51.115157Z"
+generated: "2024-01-05T11:54:47.581638Z"
